--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
-}
-{
-  "rewrites": [
-    { "source": "/", "destination": "/servicos/index.html" },
-    { "source": "/admin", "destination": "/servicos/area_do_cliente/admin.html" },
-    { "source": "/dashboard", "destination": "/servicos/area_do_cliente/dashboard.html" }
-  ]
+  "version": 2
 }
